--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,34 +4,34 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Limitless - Responsive Web Application Kit by Eugene Kopyov</title>
+	<title>Digital Visiting Cards</title>
 
 	<!-- Global stylesheets -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet" type="text/css">
-	<link href="static\css\icons\icomoon\styles.min.css" rel="stylesheet" type="text/css">
-	<link href="static\css\bootstrap.min.css" rel="stylesheet" type="text/css">
-	<link href="static\css\bootstrap_limitless.min.css" rel="stylesheet" type="text/css">
-	<link href="static\css\layout.min.css" rel="stylesheet" type="text/css">
-	<link href="static\css\components.min.css" rel="stylesheet" type="text/css">
-	<link href="static\css\colors.min.css" rel="stylesheet" type="text/css">
+	<link href="../static/css/icons/icomoon/styles.min.css" rel="stylesheet" type="text/css">
+	<link href="../static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="../static/css/bootstrap_limitless.min.css" rel="stylesheet" type="text/css">
+	<link href="../static/css/layout.min.css" rel="stylesheet" type="text/css">
+	<link href="../static/css/components.min.css" rel="stylesheet" type="text/css">
+	<link href="../static/css/colors.min.css" rel="stylesheet" type="text/css">
 	<!-- /global stylesheets -->
 
 	<!-- Core JS files -->
-	<script src="static\js\main\jquery.min.js"></script>
-	<script src="static\js\main\bootstrap.bundle.min.js"></script>
+	<script src="..\static\js\main\jquery.min.js"></script>
+	<script src="..\static\js\main\bootstrap.bundle.min.js"></script>
 	<script src="static\js\plugins\loaders\blockui.min.js"></script>
 	<!-- /core JS files -->
 
 	<!-- Theme JS files -->
-	<script src="static\js\plugins\visualization\d3\d3.min.js"></script>
-	<script src="static\js\plugins\visualization\d3\d3_tooltip.js"></script>
-	<script src="static\js\plugins\forms\styling\switchery.min.js"></script>
-	<script src="static\js\plugins\forms\selects\bootstrap_multiselect.js"></script>
-	<script src="static\js\plugins\ui\moment\moment.min.js"></script>
-	<script src="static\js\plugins\pickers\daterangepicker.js"></script>
+	<script src="..\static\js\plugins\visualization\d3\d3.min.js"></script>
+	<script src="..\static\js\plugins\visualization\d3\d3_tooltip.js"></script>
+	<script src="..\static\js\plugins\forms\styling\switchery.min.js"></script>
+	<script src="..\static\js\plugins\forms\selects\bootstrap_multiselect.js"></script>
+	<script src="..\static\js\plugins\ui\moment\moment.min.js"></script>
+	<script src="..\static\js\plugins\pickers\daterangepicker.js"></script>
 
-	<script src="static\js\app.js"></script>
-	<script src="static\js\demo_pages\dashboard.js"></script>
+	<script src="..\static\js\app.js"></script>
+	<script src="..\static\js\demo_pages\dashboard.js"></script>
 	<!-- /theme JS files -->
 
 </head>
@@ -42,7 +42,7 @@
 	<div class="navbar navbar-expand-md navbar-dark fixed-top">
 		<div class="navbar-brand">
 			<a href="index.html" class="d-inline-block">
-				<img src="static\images\logo_light.png" alt="">
+				<img src="..\static\images\logo_light.png" alt="">
 			</a>
 		</div>
 
@@ -60,7 +60,7 @@
 
 				<li class="nav-item dropdown dropdown-user" style = "float:right">
 					<a href="#" class="navbar-nav-link d-flex align-items-center dropdown-toggle" data-toggle="dropdown">
-						<img src="static\images\demo\users\face11.jpg" class="rounded-circle mr-2" height="34" alt="">
+						<img src="..\static\images\demo\users\face11.jpg" class="rounded-circle mr-2" height="34" alt="">
 						<span>{{ session['name']}}</span>
 					</a>
 
@@ -106,7 +106,7 @@
 					<div class="card-body">
 						<div class="media">
 							<div class="mr-3">
-								<a href="#"><img src="static\images\demo\users\face11.jpg" width="38" height="38" class="rounded-circle" alt=""></a>
+								<a href="#"><img src="..\static\images\demo\users\face11.jpg" width="38" height="38" class="rounded-circle" alt=""></a>
 							</div>
 
 							<div class="media-body">
